@@ -119,11 +119,7 @@ import org.tigris.subversion.svnclientadapter.SVNUrl;
 	 * @param revision
 	 */
 	public void setRevision(String revision) {
-		try {
-			this.revision = SVNRevision.getRevision(revision);
-		} catch (ParseException e) {
-			this.revision = null;
-		}
+		this.revision = getRevisionFrom(revision);
 	}
 
 	/**
