@@ -115,11 +115,7 @@ public class Switch extends SvnCommand {
 	 * @param revision The revision to set.
 	 */
 	public void setRevision(String revision) {
-		try {
-			this.revision = SVNRevision.getRevision(revision);
-		} catch (ParseException e) {
-			throw new BuildException("Cannot parse revision : "+revision,e);
-		}
+		this.revision = getRevisionFrom(revision);
 	}
 	/**
 	 * @param url The url to set.
